# llm-zoomcamp-2026-homework

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
dlt-workshop/: README.md  analyze_tokens.py  load_logfire.py  main.py
hw1/: README.md  hw1.py  rag_helper.py
hw2/: README.md  hw2.py  search_utils.py
hw3/: README.md
hw4/: README.md  hw4.py
hw5/: README.md  hw5.py  starter.py
shared/: chunks.py  load_lessons.py
