[project]
name = "llm-zoomcamp-2026-homework"
version = "0.1.0"
description = "LLM Zoomcamp 2026 homework submissions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dlt[duckdb]>=1.29.0",
    "gitsource>=0.0.5",
    "logfire>=3.5.1",
    "minsearch>=0.1.1",
    "numpy>=2.2.6",
    "onnxruntime>=1.23,<1.24",
    "openai>=2.44.0",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pydantic-ai>=0.8.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tokenizers>=0.23.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.uv]
package = true
